WHAT IS NEW?

??? ? ???? [A????]

  * New Features

  * Bugfixes
    * Wrong names used for reserve party heroes who level during
      battles [Ralph]
    * In the map editor, tile 0 on map layers did not correctly become
      transparent after swapping map layers [Ralph]

  * New Plotscripting Stuff

  * Vikings of Midgard

  * Stuff Only Developers Will Notice

May 6 2011 [Zenzizenzic]

  * New Features
    * Ported  to Mac OS X! (Intel Macs only) [Ralph]
    * New general bitset "Locked heroes can't be re-ordered" [James]
    * Slice collection editor can create complex collections of slices
      to load into plotscripts [James]
    * New general bitset, "Attack captions pause battle meters" [James]
    * Savegames are now in a new format. Instead of a gamename.sav
      file you will have a gamename.saves folder. (the conversion is
      automagical and you will not lose any saves) [James]
    * Rewrote script usage menu to be enormously faster and sort
      scripts into numerical/alphabetical order [Ralph]
    * You may now have up to 500 NPC definitions per map [Ralph]
    * Maximum map size raised to 100,000 tiles [Ralph]
    * New menu item bitset to suppress the on-load script if the
      menu item closes the menu [James]
    * New menu feature to automatically open another menu when you
      close the current menu with ESC [James]
    * Expanded (and fixed) Erase Map Data menu [Ralph]
    * The line and oval tools are now pleasant to use instead of
      teeth-gnashingly awful, and the pixels in the tile editor are
      no longer stretched [Ralph]
    * Added Replace Colour tool to tile and sprite editors [Ralph]
    * New general bitset "Don't randomize battle ready meters" [James]
    * New attack bitset "Delay doesn't block further actions" allows
      attacks to be queued without blocking the attacker from taking
      other actions [James]
    * Jay Tennant's gfx_directx is now the default graphics backend